2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-thin.ads:
	(AI_PASSIVE): Removed. Use from AWS.OS_Lib.Definitions.
	(AI_CANONNAME): Idem.
	(AI_NUMERICHOST): Idem.
	(GetAddrInfo): Idem.
	(FreeAddrInfo): Idem.
	(GAI_StrError): Removed.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* src.gpr:
	Do not use "null;" as it is not support on GNAT 5.02.

	* makefile:
	(SOURCES): Add aws-attachments.adb.

	* aws-attachments.adb:
	(Add): Another Content_ID casing fix.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* aws-attachments.adb:
	(Add): Fix Content_ID casing.

	* aws-attachments.ads:
	(Add): Fix Content_ID casing.
	Fix typo in comment.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* aws-client.ads, aws-client.adb, aws-headers.ads, aws-headers.adb,
	  aws-messages.ads, aws-mime.ads, aws-mime.adb, aws-status.ads,
	  aws-status.adb, aws-status-set.ads, aws-status-set.adb,
	  aws-server-protocol_handler.adb:
	Merge from the multipart_related branch.
	New feature contributed by Henrik Sundberg.

	* aws-attachments.ads, aws-attachments.adb:
	Initial revision.
	Merge from the multipart_related branch.
	New feature contributed by Henrik Sundberg.

2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-thin.ads:
	(AI_PASSIVE): New constant.
	(AI_CANONNAME): New constant.
	(AI_NUMERICHOST): New constant.

2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Add dependence aws-os_lib-definitions.ads from
	 ../config/src/check_config.c, otherwise recompilation of
	 check_config.c does not happen on it modification.

2004-09-13  Pascal Obry  <pascal@obry.org>

	* aws-net-thin.ads:
	Removes some DOS line ending.
	Minor reformatting.

2004-09-13  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-thin.ads:
	(GetAddrInfo): New routine.
	(FreeAddrInfo): New routine.
	(GAI_StrError): New routine.

2004-09-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-ssl.adb:
	(Set_Read_Ahead): Removed.